--- a/public/sass/layout/_header.scss
+++ b/public/sass/layout/_header.scss
@@ -18,9 +18,13 @@
         height: 6.8rem;
     }
     @include respond(tab-port) {
-        width: 28.3rem;
-        height: 4.1rem;
+        width: 33.96rem;
+        height: 4.92rem;
     }
+    // @include respond(tab-port) {
+    //     width: 28.3rem;
+    //     height: 4.1rem;
+    // }
 
     @include respond(phone) {
         width: 18.8rem;
