--- a/public/sass/layout/_navigation.scss
+++ b/public/sass/layout/_navigation.scss
@@ -155,22 +155,43 @@
 //MOBILE NAVIGATION
 .mobile-nav-icon {
     position: absolute;
-    padding: 2rem;
+    padding: 1rem 2rem 0 2rem;
     top: 0;
     right: 0;
     cursor: pointer;
     display: none;
+
+    @include respond(tab-land) { //"Burger" menu icon should appear only for phone and tablet portrait screen
+        display: inline-block;
+        padding: 2rem 3rem 0 0;
+    }
+
+    @include respond(tab-port) { //"Burger" menu icon should appear only for phone and tablet portrait screen
+        display: inline-block;
+        padding: 1rem 2rem 0 2rem;
+    }
+
     @include respond(phone) { //"Burger" menu icon should appear only for phone and tablet portrait screen
         display: inline-block;
     }
-    @include respond(tab-port) { //"Burger" menu icon should appear only for phone and tablet portrait screen
-        display: inline-block;
-    }
-    @include respond(tab-land) { //"Burger" menu icon should appear only for phone and tablet portrait screen
-        display: inline-block;
-    }
+    
+    
 }
 
 ion-icon {
     font-size: 3rem;
+
+    @include respond(tab-land) { //"Burger" menu icon should appear only for phone and tablet portrait screen
+        font-size: 6rem;
+    }
+    @include respond(tab-port) { //"Burger" menu icon should appear only for phone and tablet portrait screen
+        font-size: 6rem;
+    }
+
+    @include respond(phone) { //"Burger" menu icon should appear only for phone and tablet portrait screen
+        font-size: 3rem;
+    }
+    @include respond(small-phone) { //"Burger" menu icon should appear only for phone and tablet portrait screen
+        font-size: 3rem;
+    }
   }
